k8s-demo/custom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: otel-demo
    meta.helm.sh/release-namespace: otel
  name: jaeger-collector
  namespace: otel
spec:
  ingressClassName: traefik
  rules:
  - host: jaeger-collector.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: jaeger-collector
            port:
              number: 4318
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: otel-demo
    meta.helm.sh/release-namespace: otel
  name: prometheus-collector
  namespace: otel
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
